--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <nav class="navigation">
 
-          <ul id="primary-menu" class="main-nav bg-outline-decoration hover-outline-decoration active-outline-decoration animate-click-decoration outside-item-remove-margin" role="menu">
+          <ul id="primary-menu" class="main-nav active-outline-decoration " role="menu">
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-5 current_page_item menu-item-has-children menu-item-8 act first has-children">
               <a href="#" data-level="1" class="ripple" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
                 <span class="text-wrap" style="position: relative; z-index: 2;">
