--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="top-bar solid-bg">
         <div class="left-widgets mini-widgets">
-		<span class="mini-contacts address show-on-desktop near-logo-first-switch in-menu-second-switch first">Россия, г. Магнитогорск, улица Карпинского,  дом, 12</span><span class="mini-contacts email show-on-desktop near-logo-first-switch in-menu-second-switch last">info@ovdo.ru</span></div>
+		<span class="mini-contacts address show-on-desktop near-logo-first-switch in-menu-second-switch first">Россия, г. Магнитогорск, тел. 8 922 699 3738</span><span class="mini-contacts email show-on-desktop near-logo-first-switch in-menu-second-switch last">MasloLife@mail.ru</span></div>
       </div>
 
       <header class="header-bar">
@@ -39,12 +39,12 @@
 
           <div class="mini-widgets">
             <div class="text-area show-on-desktop near-logo-first-switch in-menu-second-switch first last">
-              <h3><span style="color: #0779ff;">Более 25 лет опыта!<br>Профлист из металла ММК</span></h3>
+              <h3><span style="color: #0779ff;">только для Вас вкусное и полезное <br>.        Масло Холодного Отжима   .</span></h3>
             </div>
           </div>
           <div class="mini-widgets">
             <div class="text-area show-on-desktop near-logo-first-switch in-menu-second-switch first last">
-              <h2><span style="color: #0779ff;">8 (3519) 28-06-75</span></h2>
+              <h2><span style="color: #0779ff;">8 (922)  699-37-38</span></h2>
 
             </div>
           </div>
@@ -57,7 +57,7 @@
                 <span class="text-wrap" style="position: relative; z-index: 2;">
 			<span class="menu-item-text">
 			<span class="menu-text">
-			Профлист в Магнитогорске
+			вкусное льняное масло из семян Верхнеуральского района
 			</span>
                 </span>
                 </span>
@@ -72,19 +72,6 @@
 
       <div class="mobile-header-bar">
         <div class="mobile-navigation"><a href="#" class="dt-mobile-menu-icon floating-btn"><span class="lines"></span></a><a href="http://ovdo.ru/#" class="dt-mobile-menu-icon"><span class="lines"></span></a></div>
-        <div class="mobile-mini-widgets">
-          <div class="text-area show-on-desktop near-logo-first-switch in-menu-second-switch">
-            <h4><span style="color: #0779ff;">Более 25 лет опыта!<br>
-!</span></h4>
-          </div>
-          <div class="text-area show-on-desktop near-logo-first-switch in-menu-second-switch">
-            <h2><span style="color: #0779ff;">8 (3519) 28-06-75</span></h2>
-            <p><span style="color: #0779ff0779ff;">Профлист Магнитогорск</span></p>
-          </div>
-          <div class="text-area show-on-desktop near-logo-first-switch near-logo-second-switch show-on-second-switch">
-            <p>Следуй за нами:</p>
-          </div>
-        </div>
       </div>
     </div>
     <div class="dt-close-mobile-menu-icon"><span></span></div>
@@ -178,7 +165,7 @@
                       <div id="ultimate-heading-86005c97692ee01e0" class="uvc-heading ult-adjust-bottom-margin ultimate-heading-86005c97692ee01e0 uvc-792 " data-hspacer="no_spacer" data-halign="center" style="text-align:center">
                         <div class="uvc-heading-spacer no_spacer" style="top"></div>
                         <div class="uvc-main-heading ult-responsive" data-ultimate-target=".uvc-heading.ultimate-heading-86005c97692ee01e0 h1" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:48px;&quot;,&quot;line-height&quot;:&quot;&quot;}">
-                          <h1 style="font-family:&#39;Exo 2&#39;;font-weight:500;color:#373c48;">льняное масло МАГНИТОГОРСК</h1></div>
+                          <h1 style="font-family:&#39;Exo 2&#39;;font-weight:500;color:#373c48;">льняное масло холодного отжима</h1></div>
                       </div>
                       <div class="vc_empty_space" style="height: 40px"><span class="vc_empty_space_inner"></span></div>
                     </div>
@@ -189,14 +176,14 @@
                     <div class="wpb_wrapper">
                       <div id="interactive-banner-1-wrap-1992" class="ult-banner-block ult-adjust-bottom-margin ult-bb-more  banner-style12 " style="">
                         <img src="./img/1.jpg" alt="null">
-                        <h3 data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-top-title " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:21px;&quot;,&quot;line-height&quot;:&quot;&quot;}" class="title-center bb-top-title ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;background:#FF9800;color:#0779ff0779ff;">льняное масло С10</h3>
+                        <h3 data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-top-title " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:21px;&quot;,&quot;line-height&quot;:&quot;&quot;}" class="title-center bb-top-title ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;background:#FF9800;color:#0779ff0779ff;">АССОРТИМЕНТ И ЦЕНЫ</h3>
                         <div class="mask opaque-background" style="background:#FF9800;">
-                          <div data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-description" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:14px;&quot;,&quot;line-height&quot;:&quot;desktop:17px;&quot;}" class="bb-description ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;color:#0779ff0779ff;">Один из самых популярных современных профилей, который активно применяется в строительной сфере. Основными причинами спроса на этот материал являются: доступная ценовая категория, высокая степень прочности, небольшой вес и легкость монтажа. Цена за 1 кв.м от 245 руб.</div>
+                          <div data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-description" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:14px;&quot;,&quot;line-height&quot;:&quot;desktop:17px;&quot;}" class="bb-description ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;color:#0779ff0779ff;">Масло давим под заказ, и сразу доставляем Вам. Масло разливаем в баночки 0,5л и 0,25л. Жмых россыпаем в бумажные пакеты. По желанию красиво оформим: разольем в бутылку, упакуем пробкой и шпагатом, праздничную коробочку - все это за отдельную оплату, т.к. это повлияет на цену продукта.</div>
                         </div>
                       </div>
                       <div id="interactive-banner-1-wrap-1992" class="ult-banner-block ult-adjust-bottom-margin ult-bb-more  banner-style12 " style="">
                         <img src="./img/2.jpg" alt="null">
-                        <h3 data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-top-title " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:21px;&quot;,&quot;line-height&quot;:&quot;&quot;}" class="title-center bb-top-title ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;background:#FF9800;color:#0779ff0779ff;">льняное масло С25</h3>
+                        <h3 data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-top-title " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:21px;&quot;,&quot;line-height&quot;:&quot;&quot;}" class="title-center bb-top-title ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;background:#FF9800;color:#0779ff0779ff;">Р Е Ц Е П Т Ы</h3>
                         <div class="mask opaque-background" style="background:#FF9800;">
                           <div data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-description" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:14px;&quot;,&quot;line-height&quot;:&quot;desktop:17px;&quot;}" class="bb-description ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;color:#0779ff0779ff;">Универсальный, подходит для строительста стен, заборов и кровли. Высота волны 25 мм. и продольные ребра жесткости (3шт) на каждой волне, делают этот профиль очень стойким к снеговым нагрузкам. Цена за 1 кв.метр от 245 рублей.</div>
                         </div>
@@ -209,14 +196,14 @@
                     <div class="wpb_wrapper">
 						<div id="interactive-banner-1-wrap-1992" class="ult-banner-block ult-adjust-bottom-margin ult-bb-more  banner-style12 " style="">
                         <img src="./img/3.jpg" alt="null">
-                        <h3 data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-top-title " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:21px;&quot;,&quot;line-height&quot;:&quot;&quot;}" class="title-center bb-top-title ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;background:#FF9800;color:#0779ff0779ff;">льняное масло С18</h3>
+                        <h3 data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-top-title " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:21px;&quot;,&quot;line-height&quot;:&quot;&quot;}" class="title-center bb-top-title ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;background:#FF9800;color:#0779ff0779ff;">О П Л А Т А     З А К А З А</h3>
                         <div class="mask opaque-background" style="background:#FF9800;">
                           <div data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-description" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:14px;&quot;,&quot;line-height&quot;:&quot;desktop:17px;&quot;}" class="bb-description ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;color:#0779ff0779ff;">Отличный материал повышенной жесткости. Армируется маленькими ребрами, за счет которых кратно увеличивается стойкость листа к проминанию. Цена за 1 кв.метр от 315 рублей. </div>
                         </div>
                       </div>
                       <div id="interactive-banner-1-wrap-1992" class="ult-banner-block ult-adjust-bottom-margin ult-bb-more  banner-style12 " style="">
                         <img src="./img/4.jpg" alt="null">
-                        <h3 data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-top-title " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:21px;&quot;,&quot;line-height&quot;:&quot;&quot;}" class="title-center bb-top-title ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;background:#FF9800;color:#0779ff0779ff;">ВОЛНА...РУЧЕЁК</h3>
+                        <h3 data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-top-title " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:21px;&quot;,&quot;line-height&quot;:&quot;&quot;}" class="title-center bb-top-title ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;background:#FF9800;color:#0779ff0779ff;">КАК МЫ ДЕЛАЕМ ЭТО...</h3>
                         <div class="mask opaque-background" style="background:#FF9800;">
                           <div data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-description" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:14px;&quot;,&quot;line-height&quot;:&quot;desktop:17px;&quot;}" class="bb-description ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;color:#0779ff0779ff;">Волновой профлист – чаще всего используется для обшивки стен технических построек, для создания заборов и оград, а также для строительства коммерческих объектов. Цена за 1 кв.метр от 290 рублей.</div>
                         </div>
@@ -229,7 +216,7 @@
                     <div class="wpb_wrapper">
                       <div id="interactive-banner-1-wrap-9619" class="ult-banner-block ult-adjust-bottom-margin ult-bb-more  banner-style12 " style="">
                         <img src="./img/5.jpg" alt="null">
-                        <h3 data-ultimate-target="#interactive-banner-1-wrap-9619 .bb-top-title " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:21px;&quot;,&quot;line-height&quot;:&quot;&quot;}" class="title-center bb-top-title ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;background:#FF9800;color:#0779ff0779ff;">МЕТАЛЛОЧЕРЕПИЦА</h3>
+                        <h3 data-ultimate-target="#interactive-banner-1-wrap-9619 .bb-top-title " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:21px;&quot;,&quot;line-height&quot;:&quot;&quot;}" class="title-center bb-top-title ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;background:#FF9800;color:#0779ff0779ff;">Д О С Т А В К А  З А К А З А</h3>
                         <div class="mask opaque-background" style="background:#FF9800;">
                           <div data-ultimate-target="#interactive-banner-1-wrap-9619 .bb-description" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:14px;&quot;,&quot;line-height&quot;:&quot;desktop:17px;&quot;}" class="bb-description ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;color:#0779ff0779ff;">Металлочерепица – надежный, красивый и долговечный материал. Профиль КАСКАД напоминает своей формой плитку шоколада. Отличительной особенностью является большая ширина листов,что делает этот профиль более экономичным и придаст любому зданию строгий вид. Цена за 1 кв.м от 348 руб. </div>
 
@@ -237,7 +224,7 @@
                       </div>
                       <div id="interactive-banner-1-wrap-1992" class="ult-banner-block ult-adjust-bottom-margin ult-bb-more  banner-style12 " style="">
                         <img src="./img/6.jpg" alt="null">
-                        <h3 data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-top-title " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:21px;&quot;,&quot;line-height&quot;:&quot;&quot;}" class="title-center bb-top-title ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;background:#FF9800;color:#0779ff0779ff;">ДОБОРНЫЕ ЭЛЕМЕНТЫ</h3>
+                        <h3 data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-top-title " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:21px;&quot;,&quot;line-height&quot;:&quot;&quot;}" class="title-center bb-top-title ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;background:#FF9800;color:#0779ff0779ff;">О Т З Ы В Ы</h3>
                         <div class="mask opaque-background" style="background:#FF9800;">
                           <div data-ultimate-target="#interactive-banner-1-wrap-1992 .bb-description" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:14px;&quot;,&quot;line-height&quot;:&quot;desktop:17px;&quot;}" class="bb-description ult-responsive" style="font-family:&#39;Exo 2&#39;;font-weight:300;color:#0779ff0779ff;">Главная задача – закрыть все слабые участки кровли и не дать проникнуть туда снегу и дождю. Вторая функция, но не менее важная –декоративная. Ведь чаще всего именно по доборным элементам узнается определенный стиль дизайна кровли и ее национальная принадлежность.</div>
                         </div>
