--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <div class="wpb_wrapper">
                       <div class="vc_empty_space" style="height: 20px"><span class="vc_empty_space_inner"></span></div>
                       <div class="vc_btn3-container vc_btn3-center vc_custom_1530018776132">
-                        <a onmouseleave="this.style.borderColor=&#39;#d5124e&#39;; this.style.backgroundColor=&#39;transparent&#39;; this.style.color=&#39;#d5124e&#39;" onmouseenter="this.style.borderColor=&#39;#d5124e&#39;; this.style.backgroundColor=&#39;#d5124e&#39;; this.style.color=&#39;#0779ff0779ff&#39;;" style="border-color: rgb(213, 18, 78); color: rgb(213, 18, 78); background-color: transparent;" class="vc_general vc_btn3 vc_btn3-size-md vc_btn3-shape-rounded vc_btn3-style-outline-custom" href="http://www.ovdo.ru/index.php?mod=profnastil" title="Магазин">ПОСМОТРЕТЬ ВЕСЬ АССОРТИМЕНТ</a></div>
+                        <a onmouseleave="this.style.borderColor=&#39;#d5124e&#39;; this.style.backgroundColor=&#39;transparent&#39;; this.style.color=&#39;#d5124e&#39;" onmouseenter="this.style.borderColor=&#39;#d5124e&#39;; this.style.backgroundColor=&#39;#d5124e&#39;; this.style.color=&#39;#0779ff0779ff&#39;;" style="border-color: rgb(213, 18, 78); color: rgb(213, 18, 78); background-color: transparent;" class="vc_general vc_btn3 vc_btn3-size-md vc_btn3-shape-rounded vc_btn3-style-outline-custom" href="http://www.maslolife.ru" title="Магазин">ПОСМОТРЕТЬ ВЕСЬ АССОРТИМЕНТ</a></div>
                       <div class="vc_empty_space  vc_custom_1534499109454" style="height: 0px"><span class="vc_empty_space_inner"></span></div>
 
                       <div class="wpb_text_column wpb_content_element ">
@@ -280,7 +280,7 @@
             <section id="text-3" class="widget widget_text wf-cell wf-1-4">
               <div class="textwidget">
                 <p><img class="size-full wp-image-1862 alignnone" src="./img/logos.jpg" alt="" width="250" height="98"></p>
-                <h6><span style="color: #709be7;">Предприятие по производству льняное маслоа</span></h6>
+                <h6><span style="color: #709be7;">Мы отжали масло для Вас</span></h6>
                 <h4><span style="color: #CACCD1;">ГАРАНТИЯ КАЧЕСТВА!</span></h4>
               </div>
             </section>
@@ -288,35 +288,35 @@
               <ul class="custom-menu">
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1863 first"><a href="http://www.ovdo.ru/index.php?mod=profnastil#">ПРОФЛИСТ оцинкованный</a></li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1864">
-                  <a href="http://www.ovdo.ru/index.php?mod=profnastil#">ПРОФЛИСТ оцинкованный с полимерным покрытием</a>
+                  <a href="http://www.maslolife.ru#">МАСЛО холодного отжима</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2376">
-                  <a href="http://ovdo.ru/#">Доборные элементы</a>
+                  <a href="http://www.maslolife.ru/#">Жмых маслянных семян</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1865">
-                  <a href="http://ovdo.ru/#">Услуги листогиба</a>
+                  <a href="http://www.maslolife.ru/#">Семена льна</a>
                 </li>
               </ul>
             </section>
             <section id="presscore-custom-menu-1-3" class="widget widget_presscore-custom-menu-1 wf-cell wf-1-4">
               <ul class="custom-menu">
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1871 first">
-                  <a href="http://www.ovdo.ru/index.php?mod=stroy_tr#">Тротуарная плитка</a>
+                  <a href="http://www.maslolife.ru#">Рецепты полезной пищи</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2378">
-                  <a href="http://ovdo.ru/#">Услуги проката</a>
+                  <a href="http://www.maslolife.ru/#">Оплата и Доставка заказа</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2378">
-                  <a href="http://www.ovdo.ru/index.php?mod=angar#">ИЗГОТОВЛЕНИЕ БЕСКАРКАСНЫХ АНГАРОВ</a>
+                  <a href="http://www.maslolife.ru#">Отзывы наших клиентов</a>
                 </li>
               </ul>
             </section>
             <section id="text-5" class="widget widget_text wf-cell wf-1-4">
               <div class="textwidget">
-                <h5><img class="alignleft size-full wp-image-1878" src="./img/phone.png" alt="Телефон" width="32" height="32"><span style="color: #709be7;">8(3519) 28-06-75</span></h5>
+                <h5><img class="alignleft size-full wp-image-1878" src="./img/phone.png" alt="Телефон" width="32" height="32"><span style="color: #709be7;">8(922) 699-37-38</span></h5>
                 <h3></h3>
-                <h5><img class="alignleft size-full wp-image-1879" src="./img/email.png" alt="Электронная почта" width="32" height="32"><span style="color: #709be7;">info@ovdo.ru</span></h5>
-                <h5><img class="alignleft size-full wp-image-1876" src="./img/clock.png" alt="Время работы" width="32" height="32"><span style="color: #709be7;">Пн.-Пт.: с 7:30 до 16:00</span></h5>
+                <h5><img class="alignleft size-full wp-image-1879" src="./img/email.png" alt="Электронная почта" width="32" height="32"><span style="color: #709be7;">maslolife@mail.ru</span></h5>
+                <h5><img class="alignleft size-full wp-image-1876" src="./img/clock.png" alt="Время работы" width="32" height="32"><span style="color: #709be7;">Пн.-Пт.: с 9:00 до 20:00</span></h5>
                 <p>&nbsp;</p>
               </div>
             </section>
